# FirstFastAPIAPP

./: .gitignore  Makefile  alembic.ini  dependecy.py  docker-compose.yml  exception.py  fixtures.py  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/src/: main.py
alembic/src/auth/: router.py
alembic/versions/: 4dc2bade0234_user_init.py  5835183bfce8_user_id_in_tasks.py  a17761a6b4ab_userprofile.py  cce808aa4607_userprofile.py  f9426131e581_init.py
cache/: __init__.py  accessor.py
database/: __init__.py  accessor.py  database.py  models.py
handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
models/: __init__.py  tasks.py  user.py
repository/: __init__.py  cache_task.py  task.py  user.py
schema/: __init__.py  task.py
service/: auth.py  task.py  user.py
