[project]
name = "firstfastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Zakariya",email = "pzakariya@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.8.0)",
    "click (==8.1.8)",
    "exceptiongroup (==1.2.2)",
    "fastapi (==0.115.11)",
    "h11 (==0.14.0)",
    "idna (==3.10)",
    "pydantic (==2.10.6)",
    "pydantic-core (==2.27.2)",
    "sniffio (==1.3.1)",
    "starlette (==0.46.0)",
    "typing-extensions (==4.12.2)",
    "uvicorn (==0.34.0)",
    "more-itertools (>=10.6.0,<11.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "redis (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
